// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as danger 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: #ffffff;
  background-color: #f03e3e;
}

.emotion-0:hover {
  background-color: #c92a2a;
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 0 2px 4px rgba(0,31,62,0.19);
}

<button
  class="emotion-0 emotion-1"
>
  Primary Button
</button>
`;

exports[`renders as icon 1`] = `
.emotion-1 {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  padding: 4px;
  color: #868e96;
  background-color: transparent;
  vertical-align: middle;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: rgba(0,36,73,0.05);
}

.emotion-0 {
  vertical-align: middle;
}

.emotion-0 * {
  vector-effect: inherit;
}

<button
  class="emotion-1 emotion-2"
>
  <svg
    stroke="currentColor"
    xmlns="http://www.w3.org/2000/svg"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    width="24"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    class="emotion-0"
  >
    <circle
      cx="12"
      cy="12"
      r="1"
    />
    <circle
      cx="19"
      cy="12"
      r="1"
    />
    <circle
      cx="5"
      cy="12"
      r="1"
    />
  </svg>
</button>
`;

exports[`renders as primary 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: #ffffff;
  background-color: #4263eb;
}

.emotion-0:hover {
  background-color: #364fc7;
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 0 2px 4px rgba(0,31,62,0.19);
}

<button
  class="emotion-0 emotion-1"
>
  Primary Button
</button>
`;

exports[`renders as secondary 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,5,9,0.87);
  background-color: transparent;
}

.emotion-0:hover {
  background-color: rgba(0,36,73,0.05);
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 0 2px 4px rgba(0,31,62,0.19);
}

<button
  class="emotion-0 emotion-1"
>
  Primary Button
</button>
`;

exports[`renders when disabled 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: #ffffff;
  background-color: #4263eb;
  opacity: 0.5;
  pointer-events: none;
}

.emotion-0:hover {
  background-color: #364fc7;
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 0 2px 4px rgba(0,31,62,0.19);
}

<button
  disabled=""
  class="emotion-0 emotion-1"
>
  Disabled Button
</button>
`;

exports[`renders without crashing 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: #ffffff;
  background-color: #4263eb;
}

.emotion-0:hover {
  background-color: #364fc7;
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #ffffff,0 0 2px 4px rgba(0,31,62,0.19);
}

<button
  class="emotion-0 emotion-1"
>
  Test Button
</button>
`;
